--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -41,6 +41,9 @@
     border-radius: 20px;
 }
 
+.sidebar__searchContainer > input {
+    flex:1;
+}
 .sidebar__searchContainer > .MuiSvgIcon-root {
     color: gray;
     padding: 10px;
